# dae-pokedex-handin

./: CMakeLists.txt  README.md
content/: pokedex.json
src/: CMakeLists.txt  main.cpp
src/Documents/: JSONDocument.hpp  JSONDocumentNlohmann.cpp  JSONDocumentNlohmann.hpp  JSONDocumentSimd.cpp  JSONDocumentSimd.hpp
src/Parsers/: JSONParser.cpp  JSONParser.hpp  JSONParserNlohmann.cpp  JSONParserNlohmann.hpp  JSONParserSimd.cpp  JSONParserSimd.hpp
