cmake_minimum_required(VERSION 3.29)
project(DAEPokedex)

set (CMAKE_CXX_STANDARD 20)

include(FetchContent)

set(JSON_PARSER "nlohmann" CACHE STRING "The JSON parser to use in C++ code")
set_property(CACHE JSON_PARSER PROPERTY STRINGS "nlohmann" "simdjson")


add_subdirectory(src)

include("vendor/${JSON_PARSER}.cmake")
fetch_and_link(${PROJECT_NAME})

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/build/$<CONFIG>")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/build/$<CONFIG>")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/build/$<CONFIG>")

set_target_properties(
	${PROJECT_NAME}
	PROPERTIES
	RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
	LIBRARY_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
	ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}
)
